--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <p class="text black small intro-text">That's all about me. And I would love to hear your story :) </p>
                         </div>
                         <div class="flex justify-center align-center btn-an">
-                            <button class=" start-button btn medium bold-text"  onclick="downloadCV()"><span>Download CV</span></button>
+                            <button class="btn medium bold-text"  onclick="downloadCV()"><span>Download CV</span></button>
                         </div>
                     </div>
 
@@ -221,7 +221,7 @@
                                 <input type="number" placeholder="Phone Number" name="name"  class="small data number">
                             </div>
                             <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter your message"  class="small data"></textarea>
-                            <button class="form-submit start-button small bold-text" type="submit" onclick="sendEmail()" id="sendEmail-btn">Submit</button>
+                            <button class="form-submit btn small bold-text" type="submit" onclick="sendEmail()" id="sendEmail-btn">Submit</button>
                         </div>
                     </div>
                 </div>
