--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Anmol Ahuja | Frontend Developer</title>
-    <link rel="icon" type="image/x-icon" href="https://github.com/ahuja-anmol/test/blob/main/Img/ANMOL_ahuja__2_-removebg-preview.png?raw=true">
+    <title>Nikita Chauhan | Frontend Developer</title>
+    <link rel="icon" type="image/x-icon" href="">
     <link rel="icon" type="image/x-icon" href="logo.img">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +14,7 @@
         <header id="header">
             <div class="header-wrapper">
                 <span class="logo">
-                    <img src="https://github.com/ahuja-anmol/test/blob/main/Img/ANMOL_ahuja__2_-removebg-preview.png?raw=true" />
+                    <img src="Img\nikita.svg" />
                 </span>
                 <nav>
                     <ul id="header-ul" class="header-ul white small">
@@ -43,7 +43,7 @@
                             </p>
                         </div>
                         <div class="content-text">
-                            <span class="text large-text white">Anmol Ahuja</span>
+                            <span class="text large-text white">Nikita Chauhan</span>
                             <span class="text large-text green">
                                 FRONTEND DEVELOPER
 
@@ -60,7 +60,7 @@
                     <div class="section-right">
                         <center>
                             <div id="bitmoji-wrapper">
-                                <img class="img-wrapper" src="https://github.com/ahuja-anmol/test/blob/main/Img/bitmoji.png?raw=true" />
+                                <img class="img-wrapper" src="Img\bitmojiNikita.png" />
 
                             </div>
                         </center>
@@ -80,8 +80,12 @@
                             <div class="header-text2"><h3 class="medium">About Me</h3></div>
                         </div>
                         <div class="text intro-text">
-                            <p class=" small white intro-text">I’m Anmol Ahuja, a professional and talented Software Developer with front-end development skills. </p>
-                            <p class="text black small intro-text"> I am pursuing My bachelor's from Chandigarh University, in the field of Computer Science. I develop websites with HTML, CSS, and JavaScript.And I have created some projects using React also. I have good problem-solving skills. Also, I have good knowledge of JAVA. And I love to do Data Structure in my free time.</p>
+                            <p class=" small white intro-text">I’m Nikita Chauhan, a professional and talented Software Developer with front-end development skills and good problem-solving skills. </p>
+                            <p class="text black small intro-text">
+                                I develop websites with HTML, CSS, and JavaScript. And I have created some projects using React also. I have good knowledge of C++ and I love to do Data Structure in my free time.
+                                I like to learn a lot of new skills and experiment with code!
+                                For more you can downaload my resume!
+                            </p>
                             <p class="text black small intro-text">That's all about me. And I would love to hear your story :) </p>
                         </div>
                         <div class="flex justify-center align-center btn-an">
@@ -201,13 +205,13 @@
                                 <div class="contact-image">
                                     <img src="https://www.kemiadeleke.com/media/contact-email.svg" alt="">
                                 </div>
-                                <a target="_blank"  class="small white" href="mailto:oluwakemiadeleke20@gmail.com">anmolahuja403@gmail.com</a>
+                                <a target="_blank"  class="small white" href="mailto:nk.3niki@gmail.com">nk.3niki@gmail.com</a>
                             </div>
                             <div class="column column-three">
                                 <div class="contact-image">
                                     <img src="https://www.kemiadeleke.com/media/contact-phone.svg" alt="">
                                 </div>
-                                <a target="_blank"  href="tel:+234-813-640-4552" class="small white">+91 989650-00860</a>
+                                <a target="_blank"  href="tel:+91-96259-45606" class="small white">+91 96359-45606</a>
                             </div>
                         </div>
                         <div class="section-right" id="contact-data">
@@ -234,14 +238,14 @@
                 <div class="footer-left">
                     <div class="logo-me">
                         <a target="_blank"  href="">
-                            <img src="https://github.com/ahuja-anmol/test/blob/main/Img/ANMOL_ahuja__2_-removebg-preview.png?raw=true" alt="">
+                            <img src="Img\nikita.svg" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="logo-section">
-                    <a target="_blank"  href="https://www.linkedin.com/in/anmol-ahuja-2168791ba/"> <img src="https://www.kemiadeleke.com/media/linkedin.svg" alt="link to linkedin account"> </a>
-                    <a target="_blank"  href="https://github.com/ahuja-anmol"> <img src="https://e7.pngegg.com/pngimages/914/758/png-clipart-computer-icons-logo-github-github-logo-logo-computer-program-thumbnail.png" alt="Github"> </a>
-                    <a target="_blank"  href="https://api.whatsapp.com/send?phone=919896500860&text=Hello%20Anmol%F0%9F%99%83%20!!   "> <img src="https://www.kemiadeleke.com/media/whatsapp.svg" alt="link to whatsapp"> </a>
+                    <a target="_blank"  href="https://www.linkedin.com/in/nikita-chauhan-528150198/"> <img src="https://www.kemiadeleke.com/media/linkedin.svg" alt="link to linkedin account"> </a>
+                    <a target="_blank"  href="https://github.com/1Nikitaa"> <img src="https://e7.pngegg.com/pngimages/914/758/png-clipart-computer-icons-logo-github-github-logo-logo-computer-program-thumbnail.png" alt="Github"> </a>
+                    <a target="_blank"  href="https://wa.me/9625945606?text=Hi%20there%20%2C%20nice%20to%20meet%20you!"> <img src="https://www.kemiadeleke.com/media/whatsapp.svg" alt="link to whatsapp"> </a>
                 </div>
             </div>
 
