--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
                 </span>
                 <nav>
                     <ul id="header-ul" class="header-ul white small">
-                        <li class="home glow medium white ul"><a   onclick="changeScreen(this)">Home</a></li>
-                        <li class="about medium white ul"><a   onclick="changeScreen(this)">About</a></li>
-                        <li class="services medium white ul"><a   onclick="changeScreen(this)">Tech-Stack</a></li>
-                        <li class="contact medium white ul"><a  onclick="changeScreen(this)">Contact Me</a></li>
-                        <li><button class="start-button btn medium bold-text"  onclick="hireMe()">Let's Connect</button></li>
+                        <li class="home glow medium white ul"><a onclick="changeScreen(this)">Home</a></li>
+                        <li class="about medium white ul"><a onclick="changeScreen(this)">About</a></li>
+                        <li class="services medium white ul"><a onclick="changeScreen(this)">Tech-Stack</a></li>
+                        <li class="contact medium white ul"><a onclick="changeScreen(this)">Contact Me</a></li>
+                        <li><button class="start-button btn medium bold-text" onclick="hireMe()">Let's Connect</button></li>
                     </ul>
 
                 </nav>
+                <span class="hamburger-menu" onclick="toggleNavBar();"></span>
+                <span class="cross" onclick="toggleNavBar();"></span>
             </div>
 
         </header>
